# microservices-multistack-app

./: .dockerignore  .gitignore  API_DOCS.md  ARCHITECTURE.md  DEPLOYMENT.md  Makefile  QUICKSTART.md  README.md  comprehensive_test.sh  demo.sh  docker-compose.yml  init-db.sql  instructions.md  start.sh  terraform.tfstate  test-services.sh
.github/workflows/: ci-cd.yaml
analytics-service/: .env.example  Cargo.toml  Dockerfile
analytics-service/src/: config.rs  handlers.rs  main.rs  models.rs
argocd/: README.md  application.yaml
charts/microservices-app/: Chart.yaml  values.yaml
db-init/: init.sh
frontend/: Dockerfile  index.html  nginx.conf  package.json  vite.config.js
frontend/src/: App.jsx  api.js  index.css
k8s/analytics-service/: ConfigMap.yaml  Deployment.yaml  Service.yaml
k8s/frontend/: ConfigMap.yaml  Deployment.yaml  Service.yaml
k8s/notification-service/: ConfigMap.yaml  Deployment.yaml  Secret.yaml  Service.yaml
k8s/order-service/: ConfigMap.yaml  Deployment.yaml  Secret.yaml  Service.yaml
k8s/postgres/: ConfigMap.yaml  Deployment.yaml  InitScript.yaml  PersistentVolumeClaim.yaml  Secret.yaml  Service.yaml
k8s/product-service/: ConfigMap.yaml  Deployment.yaml  Secret.yaml  Service.yaml
notification-service/: .env.example  Dockerfile  package.json
order-service/: .env.example  Dockerfile  mvnw  pom.xml
product-service/: .env.example  Dockerfile  requirements.txt
terraform/: .gitignore  README.md  UPGRADE_SUMMARY.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
user-service/: .env.example  Dockerfile  go.mod
(+71 files in other folders)
